# final_project

./: .gitignore  .gitmodules  README.md  pyproject.toml  qwq.jinja  r1.jinja  requirements.txt
data/: process_from_outputs.py  process_hf.py
final_project/recipes/qwen3_4b/: sft_lora.yaml
recipes/: base_training_args.yaml  sft_params.yaml
recipes/accelerate_configs/: deepspeed_zero3.yaml  fsdp.yaml
recipes/qwen3_4b/: grpo.yaml  run_grpo.sh  sft_lora.yaml
recipes/qwen3_8b/: grpo.yaml  run_grpo.sh  sft_lora.yaml
recipes/qwen3_8b/secalign/: dpo_lora.sh  dpo_lora.yaml
recipes/r1_qwen_1.5b/: sft_lora.sh  sft_lora.yaml
recipes/r1_qwen_7b/: grpo.yaml  run_grpo.sh  sft_lora.sh  sft_lora.yaml
scripts/: chat.py  instructions.py  instructions_registry.py  merge_adapter.py  prepare_lora.sh  run_dpo.py  run_grpo.py  run_sft.py  scenarios.py  utils.py
scripts/tokenizers/qwen2.5-7b-instruct/: tokenizer_config.json
src/reasoning/: __init__.py  configs.py  data.py  tokenizer.py
src/reasoning/ifeval/: instructions.py  instructions_registry.py  utils.py
src/reasoning/pir/: utils.py
src/reasoning/rules/: scenarios.py  utils.py
tests/: test_dpo_tokenization_qwen.py  test_pir_tokenization_qwen.py  test_pir_tokenization_r1.py
tokenizers/qwen2.5-7b-instruct/: chat_template.jinja  update_chat_template.py
