[project]
name = "reasoning"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    "transformers",
    "datasets",
    "trl",
    "liger-kernel",
    "pyyaml"
    "peft",
    "accelerate",
    "torch"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reasoning"]
