[project]
name = "reasoning"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.13"
dependencies = [
    "transformers",
    "datasets",
    "trl",
    "liger-kernel",
    "pyyaml",
    "peft",
    "accelerate",
    "torch",
    "immutabledict",
    "nltk",
    "langdetect",
    "absl-py",
    "vllm>=0.8.3",
    "wandb",
    "deepspeed>=0.16.7",
]

[project.optional-dependencies]
compile = [
    "flash-attn"
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reasoning"]
